Add a configuration option that allows the user to choose between reusing or not the memos of a previous transaction when autofilling.

BUG: 319807
REVIEW: 112924